# debate

./: .gitignore  CMakeLists.txt  README.md  SECURITY_SCAN_RESULTS.md  buf.gen.yaml  debates.sqlite3  demo.md  details.md  package-lock.json  package.json  patch-protobuf-esm.js  sample_layout.json  sample_layout.pbtxt  test-api.js  tsconfig.json  vcpkg-configuration.json  vcpkg.json
backend/: .gitignore  CMakeLists.txt  README.md  app.js  client_message.pb.h  collection.pb.cc  debate.pb.cc  debate.pb.h  debate_event.pb.cc  debate_event.pb.h  debate_settings.pb.cc  debate_settings.pb.h  debates.sqlite3  debates.sqlite3-shm  debates.sqlite3-wal  graph-data.json  layout.pb.h  moderator_to_vr.pb.cc  package-lock.json  package.json  rendering_info.pb.cc  rendering_info.pb.h  scope.pb.cc  scope.pb.h  tsconfig.json  user_engagement.pb.cc  user_engagement.pb.h  users.sqlite3  users.sqlite3-shm  users.sqlite3-wal
backend/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
backend/controllers/: graph.controller.js
backend/routes/: graph.routes.js
backend/src/: app.js  app.ts  graph.store.js  sessionGuard.ts
backend/src/configs/: cors.js  socket.js
backend/src/controllers/: auth.controller.js  friend.controller.js  graph.controllers.js  room.controller.js
backend/src/database/: README.md
backend/src/debate/: DebateDatabaseHandler.cc  DebateDatabaseHandler.h  DebateModerator.cpp  DebateModerator.h  UserDatabaseHandler.cc  UserDatabaseHandler.h
backend/src/debateModerator/: DebateModerator.cc  DebateModerator.cpp  DebateModerator.h
backend/src/eventHandlers/: eventHandler.ts
backend/src/lib/: auth.ts  db.js  db.ts  socketHandler.js
backend/src/main/: eventHandler.ts
backend/src/models/: Friend.js  Room.js  User.js
backend/src/routes/: auth.routes.js  auth.routes.ts  data.routes.js  data.routes.ts  events.routes.js  events.routes.ts  friend.routes.js  graph.routes.js  importExport.routes.js  room.routes.js
backend/src/schemas/: node.schema.json
backend/src/server/: BackendRequestHandler.cc  BackendRequestHandler.h  DebateServer.cc  GRPCDebateServer.cc  main.cc
backend/src/socket/: README.md  index.js  socketHandler.js  utils.js
backend/src/unused/: graph.controller.js  graph.routes.js  graph.store.js  grpcClient.js  grpcServer.js  server.js
backend/src/utils/: ClaimParserLLM.cc  ClaimParserLLM.h  DebateWrapper.cc  DebateWrapper.h  DemoMode.h  GoogleJWTVerifier.cc  GoogleJWTVerifier.h  Log.cc  Log.h  PasswordHasher.cc  PasswordHasher.h  forwardSetCookies.ts  pathUtils.cpp  pathUtils.h
backend/src/virtualRenderer/: LayoutGenerator.h  MiddleendRequestHandler.cc  MiddleendRequestHandler.h  pageGenerator.cpp  virtualRenderer.cc  virtualRenderer.cpp  virtualRenderer.go  virtualRenderer.h  virtualRenderer.js
cppserver/: CMakeLists.txt  debates.sqlite3
cppserver/src/database/: databaseCommunicator.cc  databaseCommunicator.h  databaseCommunicatorOld.cc  databaseCommunicatorOld.h  debates.sqlite3  main.cc
cppserver/src/debate/: DebateDatabaseHandler.cc  DebateDatabaseHandler.h  DebateModerator.cpp  DebateModerator.h  DebateModeratorold.cpp  DebateModeratorold.h.bak  UserDatabaseHandler.cc  UserDatabaseHandler.h
cppserver/src/main/: eventHandler.cc  eventHandler.h
cppserver/src/server/: debates.sqlite3  main.cc  oldmain.cc  test.cpp  testserver.cc  tinytest.cc
cppserver/src/utils/: pathUtils.cpp  pathUtils.h
cppserver/src/virtualRenderer/: debates.sqlite3  pageGenerator.cpp  pageGenerator.h  virtualRenderer.cpp  virtualRenderer.h
middleend/: CMakeLists.txt
middleend/src/VirtualRenderer/: virtualRenderer.cpp  virtualRenderer.h
middleend/src/backendCommunicator/: BackendCommunicator.cc  BackendCommunicator.h
test/: CMakeLists.txt  README.md  test.cpp
test/json_output/ComprehensiveTest/: STEP_ComprehensiveTest_step10.json  STEP_ComprehensiveTest_step11.json  STEP_ComprehensiveTest_step12.json  STEP_ComprehensiveTest_step13.json  STEP_ComprehensiveTest_step14.json  STEP_ComprehensiveTest_step15.json  STEP_ComprehensiveTest_step16.json  STEP_ComprehensiveTest_step17.json  STEP_ComprehensiveTest_step18.json  STEP_ComprehensiveTest_step19.json  STEP_ComprehensiveTest_step20.json  STEP_ComprehensiveTest_step21.json  STEP_ComprehensiveTest_step22.json  STEP_ComprehensiveTest_step23.json  STEP_ComprehensiveTest_step24.json  STEP_ComprehensiveTest_step25.json  STEP_ComprehensiveTest_step26.json  STEP_ComprehensiveTest_step27.json  STEP_ComprehensiveTest_step4.json  STEP_ComprehensiveTest_step5.json  STEP_ComprehensiveTest_step6.json  STEP_ComprehensiveTest_step7.json  STEP_ComprehensiveTest_step8.json  STEP_ComprehensiveTest_step9.json
test/json_output/GlobalWarmingHoaxDebate/: STEP_GlobalWarmingHoaxDebate_step10.json  STEP_GlobalWarmingHoaxDebate_step11.json  STEP_GlobalWarmingHoaxDebate_step12.json  STEP_GlobalWarmingHoaxDebate_step13.json  STEP_GlobalWarmingHoaxDebate_step14.json  STEP_GlobalWarmingHoaxDebate_step15.json  STEP_GlobalWarmingHoaxDebate_step16.json  STEP_GlobalWarmingHoaxDebate_step3.json  STEP_GlobalWarmingHoaxDebate_step4.json  STEP_GlobalWarmingHoaxDebate_step5.json  STEP_GlobalWarmingHoaxDebate_step6.json  STEP_GlobalWarmingHoaxDebate_step8.json  STEP_GlobalWarmingHoaxDebate_step9.json
test/json_output/SeaLevelDebate/: STEP_SeaLevelDebate_step10.json  STEP_SeaLevelDebate_step11.json  STEP_SeaLevelDebate_step12.json  STEP_SeaLevelDebate_step13.json  STEP_SeaLevelDebate_step14.json  (+8 more)
test/scenarios/: ClimateChangeDebate.pbtxt  ClimateChangeDemo.pbtxt  ClimateChangeSkepticDemo.pbtxt  ComprehensiveTest.pbtxt  ConcedeChallenge.pbtxt  ConcedePropagationTest.pbtxt  CreateDebate.pbtxt  FullStateVerification.pbtxt  GlobalWarmingHoaxDebate.pbtxt  MegaTest.pbtxt  SeaLevelDebate.pbtxt  TestA.pbtxt  TrumpSeaLevel.pbtxt  WeatherVsClimate.pbtxt
test/tests/: test_challenge_propagation.cc  test_debate_create.cc  test_debate_simulation.cc  test_enter_debate_members.cc  test_scenario_runner.cc  test_step_view_layout.cc
test/tools/: import_debate_tool.cc
trash/test/: CMakeLists.txt  main_min.cpp
(+699 files in other folders)
